prod objects created

--- a/products.html
+++ b/products.html
@@ -85,7 +85,7 @@
                 <div class="name">Iphone 12</div>
                 <div class="tools">900$</div>
 
-                <button class="addtocart">
+                <button class="addtocart" id="prod0">
                     <div class="pretext">
                         <i class="fas fa-cart-plus"></i> ADD TO CART
                     </div>
@@ -98,7 +98,7 @@
                 <div class="name">Samsung Galaxy</div>
                 <div class="tools">800$</div>
 
-                <button class="addtocart">
+                <button class="addtocart" id="prod1">
                     <div class="pretext">
                         <i class="fas fa-cart-plus"></i> ADD TO CART
                     </div>
@@ -112,7 +112,7 @@
                 <div class="name">Google Pixel Phone</div>
                 <div class="tools">700$</div>
 
-                <button class="addtocart">
+                <button class="addtocart" id="prod2">
                     <div class="pretext">
                         <i class="fas fa-cart-plus"></i> ADD TO CART
                     </div>
@@ -126,7 +126,7 @@
                 <div class="name">Apple Ipad</div>
                 <div class="tools">400$</div>
 
-                <button class="addtocart">
+                <button class="addtocart" id="prod3">
                     <div class="pretext">
                         <i class="fas fa-cart-plus"></i> ADD TO CART
                     </div>
@@ -140,7 +140,7 @@
                 <div class="name">Samsung Tablet</div>
                 <div class="tools">250$</div>
 
-                <button class="addtocart">
+                <button class="addtocart" id="prod4">
                     <div class="pretext">
                         <i class="fas fa-cart-plus"></i> ADD TO CART
                     </div>
@@ -154,7 +154,7 @@
                 <div class="name">Google Pixel Tablet</div>
                 <div class="tools">300$</div>
 
-                <button class="addtocart">
+                <button class="addtocart" id="prod5">
                     <div class="pretext">
                         <i class="fas fa-cart-plus"></i> ADD TO CART
                     </div>
@@ -168,7 +168,7 @@
                 <div class="name">Apple Macbook Pro</div>
                 <div class="tools">1800$</div>
 
-                <button class="addtocart">
+                <button class="addtocart" id="prod6">
                     <div class="pretext">
                         <i class="fas fa-cart-plus"></i> ADD TO CART
                     </div>
@@ -182,7 +182,7 @@
                 <div class="name">Apple Macbook Air</div>
                 <div class="tools">1200$</div>
 
-                <button class="addtocart">
+                <button class="addtocart" id="prod7">
                     <div class="pretext">
                         <i class="fas fa-cart-plus"></i> ADD TO CART
                     </div>
@@ -196,7 +196,7 @@
                 <div class="name">Dell XPS 15</div>
                 <div class="tools">1300$</div>
 
-                <button class="addtocart">
+                <button class="addtocart" id="prod8">
                     <div class="pretext">
                         <i class="fas fa-cart-plus"></i> ADD TO CART
                     </div>
@@ -210,7 +210,7 @@
                 <div class="name">Apple Airpods Pro</div>
                 <div class="tools">250$</div>
 
-                <button class="addtocart">
+                <button class="addtocart" id="prod9">
                     <div class="pretext">
                         <i class="fas fa-cart-plus"></i> ADD TO CART
                     </div>
@@ -225,7 +225,7 @@
                 <div class="name">Apple Airpods Max</div>
                 <div class="tools">600$</div>
 
-                <button class="addtocart">
+                <button class="addtocart" id="prod10">
                     <div class="pretext">
                         <i class="fas fa-cart-plus"></i> ADD TO CART
                     </div>
@@ -239,7 +239,7 @@
                 <div class="name">Beats Studio</div>
                 <div class="tools">300$</div>
 
-                <button class="addtocart">
+                <button class="addtocart" id="prod11">
                     <div class="pretext">
                         <i class="fas fa-cart-plus"></i> ADD TO CART
                     </div>
@@ -253,7 +253,7 @@
                 <div class="name">56 Inch LG Smart TV</div>
                 <div class="tools">600$</div>
 
-                <button class="addtocart">
+                <button class="addtocart" id="prod12">
                     <div class="pretext">
                         <i class="fas fa-cart-plus"></i> ADD TO CART
                     </div>
@@ -267,7 +267,7 @@
                 <div class="name">56 Inch LG Smart TV Curved</div>
                 <div class="tools">800$</div>
 
-                <button class="addtocart">
+                <button class="addtocart" id="prod13">
                     <div class="pretext">
                         <i class="fas fa-cart-plus"></i> ADD TO CART
                     </div>
@@ -281,7 +281,7 @@
                 <div class="name">Samsung 86 Inch Curved Ultrawide Smart TV </div>
                 <div class="tools">1300$</div>
 
-                <button class="addtocart">
+                <button class="addtocart" id="prod14">
                     <div class="pretext">
                         <i class="fas fa-cart-plus"></i> ADD TO CART
                     </div>
@@ -295,7 +295,7 @@
                 <div class="name">Apple Smart Watch</div>
                 <div class="tools">400$</div>
 
-                <button class="addtocart">
+                <button class="addtocart" id="prod15">
                     <div class="pretext">
                         <i class="fas fa-cart-plus"></i> ADD TO CART
                     </div>
@@ -310,7 +310,7 @@
                 <div class="name">Samsung Galaxy Smart Watch</div>
                 <div class="tools">300$</div>
 
-                <button class="addtocart">
+                <button class="addtocart" id="prod16">
                     <div class="pretext">
                         <i class="fas fa-cart-plus"></i> ADD TO CART
                     </div>
@@ -324,7 +324,7 @@
                 <div class="name">Google Pixel Smart Watch</div>
                 <div class="tools">350$</div>
 
-                <button class="addtocart">
+                <button class="addtocart" id="prod17">
                     <div class="pretext">
                         <i class="fas fa-cart-plus"></i> ADD TO CART
                     </div>
