Flexbox implementation and transfer to OOP design

--- a/index.html
+++ b/index.html
@@ -76,7 +76,9 @@
             </div>
         </div>
         <div class="index-content">
-
+            <h1 class="logo-header">
+                <span class="logo">Good</span><span class="logo">Wire</span>
+            </h1>
         </div>
     </div>
 </body>
