--- a/contact.html
+++ b/contact.html
@@ -16,67 +16,67 @@
 </head>
 <body>
     <div class="index">
-      <div class="navbar">
-        <div class="navbar-top">
-            <div class="upper-nav-content">
-                <a href="track-order.html">Track an Order</a>
-                <a>Français</a>
-                <a id="region">Change Region</a>
-            </div>
-            <div class="lower-nav-content">
-                <a href="index.html"><div class="logo">
-                    <img src="src/img/logo.png" alt="logo">
-                    <div class="logo-text">
-                        <h2>GoodWire</h1>
-                        <p>New or used, we're making an impact</p>
-                    </div>
-                </div></a>
-                <div class="right-content">
-                    <div class="cart">
-                        <i class="fa-solid fa-shopping-cart"></i>
-                        <a href="cart.html">
-                          <ion-icon name="basket"></ion-icon>Cart <span>0</span>
-                        </a>
-                    </div>
-                    <div class="account">
-                        <i class="fa-solid fa-user"></i>
-                        <a id="account" href="login.html">Account</a>
+        <div class="navbar">
+            <div class="navbar-top">
+                <div class="upper-nav-content">
+                    <a href="track-order.html">Track an Order</a>
+                    <a>Français</a>
+                    <a id="region">Change Region</a>
+                </div>
+                <div class="lower-nav-content">
+                    <a href="index.html"><div class="logo">
+                        <img src="src/img/logo.png" alt="logo">
+                        <div class="logo-text">
+                            <h2>GoodWire</h1>
+                            <p>New or used, we're making an impact</p>
+                        </div>
+                    </div></a>
+                    <div class="right-content">
+                        <div class="cart">
+                            <i class="fa-solid fa-shopping-cart"></i>
+                            <a href="cart.html">
+                                <ion-icon name="basket"></ion-icon>Cart <span>0</span>
+                            </a>
+                        </div>
+                        <div class="account">
+                            <i class="fa-solid fa-user"></i>
+                            <a id="account" href="login.html">Account</a>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="navbar-bottom">
-            <div class="links">
-                <div class="dropdown">
-                    <button class="dropbtn" id="products-btn">Products
-                      <i id="products-caret" class="fa-solid fa-caret-down"></i>
-                    </button>
-                    <div class="dropdown-content" id="products">
-                      <a href="#">View All</a>
-                    </div>
-                </div> 
-                <div class="dropdown">
-                    <button class="dropbtn" id="services-btn">Services
-                      <i id="services-caret" class="fa-solid fa-caret-down"></i>
-                    </button>
-                    <div class="dropdown-content" id="services">
-                        <a href="#">Technical Support</a>
-                        <a href="#">Warranty</a>
-                    </div>
-                </div> 
-                <div class="dropdown">
-                    <button class="dropbtn" id="support-btn">Support
-                      <i id="support-caret" class="fa-solid fa-caret-down"></i>
-                    </button>
-                    <div class="dropdown-content" id="support">
-                      <a href="about.html">About</a>
-                      <a href="contact.html">Contact Us</a>
-                      <a href="faq.html">FAQ</a>
-                    </div>
-                </div> 
+            <div class="navbar-bottom">
+                <div class="links">
+                    <div class="dropdown">
+                        <button class="dropbtn" id="products-btn">Products
+                          <i id="products-caret" class="fa-solid fa-caret-down"></i>
+                        </button>
+                        <div class="dropdown-content" id="products">
+                          <a href="products.html">View All</a>
+                        </div>
+                    </div> 
+                    <div class="dropdown">
+                        <button class="dropbtn" id="services-btn">Services
+                          <i id="services-caret" class="fa-solid fa-caret-down"></i>
+                        </button>
+                        <div class="dropdown-content" id="services">
+                            <a href="tech-support.html">Technical Support</a>
+                            <a href="warranty.html">Warranty</a>
+                        </div>
+                    </div> 
+                    <div class="dropdown">
+                        <button class="dropbtn" id="support-btn">Support
+                          <i id="support-caret" class="fa-solid fa-caret-down"></i>
+                        </button>
+                        <div class="dropdown-content" id="support">
+                          <a href="about.html">About</a>
+                          <a href="contact.html">Contact Us</a>
+                          <a href="faq.html">FAQ</a>
+                        </div>
+                    </div> 
+                </div>
             </div>
         </div>
-    </div>
         <div class="index-content">
             <form id="contact-form">
                 <h1>Contact Us</h1>
