--- a/personal-information.html
+++ b/personal-information.html
@@ -33,7 +33,9 @@
                     <div class="right-content">
                         <div class="cart">
                             <i class="fa-solid fa-shopping-cart"></i>
-                            <a href="cart.html">Cart</a>
+                            <a href="cart.html">
+                                <ion-icon name="basket"></ion-icon>Cart <span>0</span>
+                            </a>
                         </div>
                         <div class="account">
                             <i class="fa-solid fa-user"></i>
@@ -49,7 +51,7 @@
                           <i id="products-caret" class="fa-solid fa-caret-down"></i>
                         </button>
                         <div class="dropdown-content" id="products">
-                          <a href="#">View All</a>
+                          <a href="products.html">View All</a>
                         </div>
                     </div> 
                     <div class="dropdown">
@@ -57,8 +59,8 @@
                           <i id="services-caret" class="fa-solid fa-caret-down"></i>
                         </button>
                         <div class="dropdown-content" id="services">
-                            <a href="#">Technical Support</a>
-                            <a href="#">Warranty</a>
+                            <a href="tech-support.html">Technical Support</a>
+                            <a href="warranty.html">Warranty</a>
                         </div>
                     </div> 
                     <div class="dropdown">
