--- a/track-order.html
+++ b/track-order.html
@@ -50,7 +50,7 @@
                           <i id="products-caret" class="fa-solid fa-caret-down"></i>
                         </button>
                         <div class="dropdown-content" id="products">
-                          <a href="#">View All</a>
+                          <a href="products.html">View All</a>
                         </div>
                     </div> 
                     <div class="dropdown">
@@ -58,8 +58,8 @@
                           <i id="services-caret" class="fa-solid fa-caret-down"></i>
                         </button>
                         <div class="dropdown-content" id="services">
-                            <a href="#">Technical Support</a>
-                            <a href="#">Warranty</a>
+                            <a href="tech-support.html">Technical Support</a>
+                            <a href="warranty.html">Warranty</a>
                         </div>
                     </div> 
                     <div class="dropdown">
