Updated account dashboard styling

--- a/account.html
+++ b/account.html
@@ -100,12 +100,12 @@
                             <a>View More <i class="fa-solid fa-arrow-right"></i></a>
                         </div>
                     </div>
-                    <div id="payment-info" class="access-card">
+                    <div id="contact-info" class="access-card">
                         <div class="access-content">
-                            <i id="card-icon" class="fa-solid fa-credit-card"></i>
-                            <h3>Payment Information</h3>
-                            <p>Manage your cards on file for a smoother checkout process.</p>
-                            <a>View More <i class="fa-solid fa-arrow-right"></i></a>
+                            <i id="card-icon" class="fa-solid fa-question"></i>
+                            <h3>Account Support</h3>
+                            <p>Need help with your account? We're here to help and assist in any way possible.</p>
+                            <a>Contact Us <i class="fa-solid fa-arrow-right"></i></a>
                         </div>
                     </div>
                     <div id="personal-info" class="access-card">
