--- a/order-history.html
+++ b/order-history.html
@@ -79,7 +79,6 @@
             <div class="left-content">
                 <a class="back" href="account.html"><i class="fa-solid fa-arrow-left"></i> &nbsp; Back to Account</a>
                 <a class="category selected" href="order-history.html"><i class="fa-solid fa-rotate-left"></i> &nbsp; Order History</a>
-                <a class="category" href="payment-information.html"><i class="fa-solid fa-credit-card"></i> &nbsp; Payment Information</a>
                 <a class="category" href="personal-information.html"><i class="fa-solid fa-user-circle"></i> &nbsp; Personal Information</a>
             </div>
             <div class="right-col">
@@ -114,7 +113,7 @@
                                     <div class="shipping-progress"></div>
                                 </div>
                             </div>
-                            <button>Cancel Order</button>
+                            <butto class="cancel">Cancel Order</button>
                         </div>
                     </div>
                     <div class="order-card">
