--- a/personal-information.html
+++ b/personal-information.html
@@ -80,7 +80,6 @@
             <div class="left-content">
                 <a class="back" href="account.html"><i class="fa-solid fa-arrow-left"></i> &nbsp; Back to Account</a>
                 <a class="category" href="order-history.html"><i class="fa-solid fa-rotate-left"></i> &nbsp; Order History</a>
-                <a class="category" href="payment-information.html"><i class="fa-solid fa-credit-card"></i> &nbsp; Payment Information</a>
                 <a class="category selected" href="personal-information.html"><i class="fa-solid fa-user-circle"></i> &nbsp; Personal Information</a>
             </div>
             <div class="right-col">
@@ -130,7 +129,7 @@
                                         <input type="text" id="last-name" name="last-name" placeholder="Last Name">
                                     </div>
                                 </div>
-                                <button id="name-change-submit" type="button">Save</button>
+                                <button class="cancel" id="name-change-submit" type="button">Save</button>
                             </form>
                         </div>
                         <div id="email-change">
@@ -141,7 +140,7 @@
                                         <input type="text" id="email-address" name="email-address" placeholder="Email Address">
                                     </div>
                                 </div>
-                                <button id="email-change-submit" type="button">Save</button>
+                                <button class="cancel" id="email-change-submit" type="button">Save</button>
                             </form>
                         </div>
                         <div id="phone-change">
@@ -152,7 +151,7 @@
                                         <input type="text" id="phone" name="phone" placeholder="Phone Number">
                                     </div>
                                 </div>
-                                <button id="phone-change-submit" type="button">Save</button>
+                                <button class="cancel" id="phone-change-submit" type="button">Save</button>
                             </form>
                         </div>
                         <div id="shipping-change">
@@ -187,7 +186,7 @@
                                         <input type="text" id="postal-code" name="postal-code" placeholder="Postal Code">
                                     </div>
                                 </div>
-                                <button id="shipping-change-submit" type="button">Save</button>
+                                <button class="cancel" id="shipping-change-submit" type="button">Save</button>
                             </form>
                         </div>
                     </div>
