Order class implemented

--- a/order-history.html
+++ b/order-history.html
@@ -98,7 +98,7 @@
                                 </div>
                             </div>
                             <div id="product-details">
-                                <img id="product-image" src="src/img/xbox.jpg">
+                                <img id="product-image">
                                 <div id="right-details">
                                     <h4>Placeholder Product</h4>
                                     <p>Quantity: 1</p>
@@ -130,4 +130,5 @@
 <script src="src/js/bundle.js"></script>
 <script type="module" src="src/js/index.js"></script>
 <script type="module" src="src/js/account.js"></script>
+<script type="module" src="src/js/order.js"></script>
 </html>
