--- a/index.html
+++ b/index.html
@@ -82,5 +82,5 @@
         </div>
     </div>
 </body>
-<script type="text/javascript" src="src/js/cart.js"></script>
+<script type="module" src="src/js/cart.js"></script>
 </html>
