--- a/track-order.html
+++ b/track-order.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="https://fonts.cdnfonts.com/css/product-sans" rel="stylesheet">
         <script src="https://kit.fontawesome.com/f7c8be4779.js" crossorigin="anonymous"></script>
-        <script type="text/javascript" src="src/js/index.js"></script>
+        <script type="module" src="src/js/index.js"></script>
         <link rel="icon" href="src/img/logo.png" type="image/png">
         <link rel="stylesheet" href="src/css/index.css">
         <link rel="stylesheet" href="src/css/login.css">
@@ -92,5 +92,5 @@
     </div>
 </body>
 <script src="src/js/bundle.js"></script>
-<script src="src/js/account.js"></script>
+<script type="module" src="src/js/account.js"></script>
 </html>
