--- a/personal-information.html
+++ b/personal-information.html
@@ -90,7 +90,7 @@
                         <h2>Current Profile</h2>
                         <p id="name"></p>
                         <p id="email"></p>
-                        <p id="phone"></p>
+                        <p id="curphone"></p>
                         <p id="address"></p>
                     </div>
                     <div class="new-details-form">
