Updated index and cart styling

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 </div>
             </div>
         </div>
-        <div class="index-content" id="splash">
+        <div class="index-content main" id="splash">
             <h1 class="logo-header">
                 <div id="brand-1"><img src="src/img/logo.png" alt="logo"><p class="splash">GoodWire</p><p id="smalltext" class="splash small">New or used, we're making an impact</p></div>
             </h1>
