--- a/cart.html
+++ b/cart.html
@@ -79,22 +79,8 @@
                 <h1>Your Cart</h1>
                 <div class="cart-products">
                     <p>No products to display</p>
-                    <div class="prod-row">
-                        <div class="left">
-                            <div class="prod-img">
-                                <img src="src/img/iphone14.jpeg" alt="">
-                            </div>
-                            <div class="prod-info">
-                                <h2 id="prodname">iPhone 12 Pro Max</h2>
-                                <p id="price">Price: $1,299.99</p>
-                                <p id="amt">Quantity: 1</p>
-                            </div>
-                        </div>
-                        <div class="right">
-                            <div class="prod-btns">
-                                <button id="prod1" class="remove"><i class="fa-solid fa-times-circle"></i></button>
-                            </div>
-                        </div>
+                    <div class="products">  <!--products will go in here--> 
+
                     </div>
                 </div>
             </div>
