--- a/about.html
+++ b/about.html
@@ -15,9 +15,9 @@
     <div class="upper-content">
         <div class="navbar">
             <a href="index.html">Shop</a>
-            <a href="support.html">Support</a>
+            <a href="contact.html">Support</a>
             <a href="about.html"><strong>About</strong></a>
-            <i class="fa-solid fa-user-circle"></i>
+            <a href="account.html"><i class="fa-solid fa-user-circle"></i></a>
         </div>
         <div class="main-content">
             <div class="title-content">
