--- a/payment-success.html
+++ b/payment-success.html
@@ -22,7 +22,7 @@
         <div class="order-placed-backdrop">
             <div class="order-placed">
                 <img src="src/img/checkmark-order-placed.gif" loop="False">
-                <h2>Order Placed</h2>
+                <h2 id="order-placed">Order Placed</h2>
                 <p>
                     Your order has been placed and a confirmation has been sent to the email address provided at the time of purchase.
                     Shipping times may vary depending on the product and the destination. If you have any questions, please contact us at
@@ -33,7 +33,7 @@
                         <button class="button">Continue Shopping</button>
                     </a>
                     <a href="order-history.html">
-                        <button class="button">View Order History</button>
+                        <button id="history-btn" class="button">View Order History</button>
                     </a>
                 </div>
             </div>
@@ -41,5 +41,5 @@
         </div>
     </div>
 </body>
-
+<script type="module" src="src/js/index.js"></script>
 </html>
