--- a/cart.html
+++ b/cart.html
@@ -79,9 +79,6 @@
                 <h1>Your Cart</h1>
                 <div class="cart-products">
                     <p>No products to display</p>
-                    <div class="products">  <!--products will go in here--> 
-
-                    </div>
                 </div>
             </div>
             <div class="cart-summary">
@@ -122,25 +119,5 @@
 </body>
 <script type="module" src="src/js/index.js"></script>
 <script type="module" src="src/js/account.js"></script>
-<script type="text/javascript" src="src/js/cart.js"></script>
+<script type="module" src="src/js/cart.js"></script>
 </html>
-
-<!--
-    <div class="prod-row">
-    <div class="left">
-        <div class="prod-img">
-            <img src="src/img/iphone14.jpeg" alt="">
-        </div>
-        <div class="prod-info">
-            <h2 id="prodname">iPhone 12 Pro Max</h2>
-            <p id="price">Price: $1,299.99</p>
-            <p id="amt">Quantity: 1</p>
-        </div>
-    </div>
-    <div class="right">
-        <div class="prod-btns">
-            <button id="prod1" class="remove"><i class="fa-solid fa-times-circle"></i></button>
-        </div>
-    </div>
-</div>
--->
