--- a/process-payment.html
+++ b/process-payment.html
@@ -9,10 +9,10 @@
     <link href="https://fonts.cdnfonts.com/css/product-sans" rel="stylesheet">
     <link rel="icon" href="src/img/logo.png" type="image/png">
     <script src="https://kit.fontawesome.com/f7c8be4779.js" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="src/js/payment.js"></script>
+    <script type="module" src="src/js/index.js"></script>
     <title>GoodWire | Payment</title>
 </head>
-<body onload="processPayment();">
+<body>
     <div aria-label="Orange and tan hamster running in a metal wheel" role="img" class="wheel-and-hamster">
         <div class="wheel"></div>
         <div class="hamster">
