Re-enabled password authentication

--- a/forgot-password.html
+++ b/forgot-password.html
@@ -129,14 +129,13 @@
     var email = document.getElementById("email").value;
     code = Math.floor(Math.random() * 1000000);
     localStorage.setItem("auth-code", code)
-    // check localstorage to see if email exists
     if(JSON.parse(localStorage.getItem('accounts')).find(account => account.email == email) != undefined) {
         document.getElementById("loader").style.display = "block"
-        /*emailjs.send("service_qxg43si","template_62yakn2",{
+        emailjs.send("service_qxg43si","template_62yakn2",{
             to_name: doc.name,
             message: code,
             email_to: doc._id,
-        });*/
+        });
         setTimeout (function() {
             document.getElementById("loader").style.display = "none"
             document.getElementById("description").innerHTML = "We've sent you a verification code to your email. <br>Please enter it below to continue"
