Fixed an error with email sending

--- a/forgot-password.html
+++ b/forgot-password.html
@@ -129,25 +129,32 @@
     var email = document.getElementById("email").value;
     code = Math.floor(Math.random() * 1000000);
     localStorage.setItem("auth-code", code)
-    if(JSON.parse(localStorage.getItem('accounts')).find(account => account.email == email) != undefined) {
-        document.getElementById("loader").style.display = "block"
-        emailjs.send("service_qxg43si","template_62yakn2",{
-            to_name: doc.name,
-            message: code,
-            email_to: doc._id,
-        });
-        setTimeout (function() {
-            document.getElementById("loader").style.display = "none"
-            document.getElementById("description").innerHTML = "We've sent you a verification code to your email. <br>Please enter it below to continue"
-            document.getElementById("email-label").innerHTML = "Verification Code"
-            document.getElementById("email").style.display = "none"
-            document.getElementById("code").style.display = "block"
-            document.getElementById("authbutton").style.display = "none"
-            document.getElementById("authenticate").style.display = "block"
-        }, 4000);
-    } else {
-        document.getElementById("description").innerHTML = "We couldn't find an account with that email address. <br>Please try again"
+    var accounts = JSON.parse(localStorage.getItem("accounts"))
+    for (var i = 0; i < accounts.length; i++) {
+        if (accounts[i].email == email) {
+            var doc = accounts[i]
+            document.getElementById("loader").style.display = "block"
+            emailjs.send("service_qxg43si","template_62yakn2",{
+                to_name: doc.name,
+                message: code,
+                email_to: doc.email,
+            });
+            setTimeout (function() {
+                document.getElementById("loader").style.display = "none"
+                document.getElementById("description").innerHTML = "We've sent you a verification code to your email. <br>Please enter it below to continue"
+                document.getElementById("email-label").innerHTML = "Verification Code"
+                document.getElementById("email").style.display = "none"
+                document.getElementById("code").style.display = "block"
+                document.getElementById("authbutton").style.display = "none"
+                document.getElementById("authenticate").style.display = "block"
+            }, 4000);
+            return true;
+        } else {
+            document.getElementById("description").innerHTML = "We couldn't find an account with that email address";
+            document.getElementById("email").style.border = "1px solid red";
+            return false;
+        }
     }
-    }
+  }
 </script>
 </html>
